--- a/career.html
+++ b/career.html
@@ -15,12 +15,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="icon" href="assets/images/home/Favicon icon - Ecomax (1).png">
+  <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Favicon icon - Ecomax (1).png">
 
 </head>
-<a href="#" class="back">
-  <i class="fa-solid fa-arrow-up-long text-white"></i>
-</a>
+<div class="scrollbar back d-none">
+  <a href="#top">
+      <i class="fa-solid fa-arrow-up-long text-white"></i>
+  </a>
+</div>
 <body>
   <!-- Navbar Start -->
   <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
@@ -37,64 +39,68 @@
       <div class="row">
           <div class="p-0 d-flex align-items-center justify-content-between">
               <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                  <a href="/">   <img  src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images" class="img-fluid"></a>
-                </div>
+                  <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images"
+                          class="img-fluid"></a>
+              </div>
               <div class="nav   d-none d-lg-block d-flex justify-content-end">
                   <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                       <li>
-                          <a href="/" class="text-success">HOME</a>
+                          <a href="/">HOME</a>
                       </li>
                       <li>
                           <a href="#">PRODUCTS</a>
                       </li>
+
                       <li>
                           <a href="about.html">ABOUT US </a>
                       </li>
                       <li>
-                          <a href="career.html">CAREER</a>
+                          <a href="career.html" class="text-success">CAREER</a>
                       </li>
                       <li>
                           <a href="contactus.html">CONTACT US</a>
                       </li>
                   </ul>
               </div>
-              <div class="col-1 d-flex justify-content-center d-lg-none ps-1 pe-1 pb-1">
-                  <div type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-                      aria-controls="offcanvasTop">
-                      <i class="fa-solid fa-bars-staggered"></i>
+              <div class="col-1 d-flex justify-content-center d-lg-none ">
+          
+
+                  <div type="button" data-bs-toggle="offcanvas"
+                      data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">   
+                                               <i class="fa-solid fa-bars-staggered"></i>
                   </div>
 
-                  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop"
-                      aria-labelledby="offcanvasTopLabel">
+                  <div  class="offcanvas w-100 offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false"
+                      tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
                       <div class="offcanvas-header">
-                          <div class="logo logo-xs logo-md d-flex me-3">
-                              <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" class="me-3" alt="logo">
-                          </div>
+                          <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
+                              <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
+                                  <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images"
+                                          class="img-fluid"></a>
+                              </div>
+                          </h5>
                           <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                               aria-label="Close"></button>
                       </div>
-                      <div class="offcanvas-body"style="padding-bottom: 400px;">
-
-                          <div class="nav">
-                              <ul class=" header-nav ">
-                                  <li>
-                                      <a href="/" >HOME</a>
-                                  </li>
-                                  <li>
-                                      <a href="#">PRODUCTS</a>
-                                  </li>
-                                  <li>
-                                      <a href="about.html">ABOUT US </a>
-                                  </li>
-                                  <li>
-                                      <a href="career.html" class="text-success">CAREER</a>
-                                  </li>
-                                  <li>
-                                      <a href="contactus.html">CONTACT US</a>
-                                  </li>
-                              </ul>
-                          </div>
-
+                      <div class="offcanvas-body">
+                          <ul class="nav d-block">
+                              <li class="m-2">
+                                  <a href="/" class="text-success">HOME</a>
+                              </li>
+                              <li class="m-2">
+                                  <a href="#">PRODUCTS</a>
+                              </li>
+  
+                              <li class="m-2">
+                                  <a href="about.html">ABOUT US </a>
+                              </li>
+                              <li class="m-2">
+                                  <a href="career.html">CAREER</a>
+                              </li>
+                              <li class="m-2">
+                                  <a href="contactus.html">CONTACT US</a>
+                              </li>
+                          </ul>
                       </div>
                   </div>
 
@@ -254,7 +260,7 @@
                   <h5 class="mb-4 footer_heading">Quick Link</h5>
                   <ul class="list-group footer-hover">
                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                      <a href="#" class="link-light text-decoration-none text-success">Home</a>
+                      <a href="#" class="link-light text-decoration-none ">Home</a>
                     </li>
                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                       <a href="#" class="link-light text-decoration-none">Product</a>
@@ -272,7 +278,7 @@
                       <button class="accordion-button collapsed" type="button"
                           data-bs-toggle="collapse" data-bs-target="#collapseTwo1"
                           aria-expanded="false" aria-controls="collapseTwo1">
-                          <div class=" m-3 d-flex  justify-content-between col-12">
+                          <div class=" mt-3 mb-3 ms-2 d-flex  justify-content-between col-12">
                               <p class="m-0 footer-link-title">Quick Link</p>
                               <p class="m-0 footer-link-icon "><i class="fa-solid fa-angle-down mt-1 me-5"></i></p>
                           </div>
@@ -283,7 +289,7 @@
                       <div class="accordion-body">
                           <ul class="list-group list-group-laine footer-hover">
                               <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                <a href="#" class="link-light text-decoration-none text-success">Home</a>
+                                <a href="#" class="link-light text-decoration-none ">Home</a>
                               </li>
                               <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                 <a href="#" class="link-light text-decoration-none">Product</a>
@@ -305,7 +311,7 @@
                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a href="about.html"
                         class="link-light text-decoration-none">About Us</a></li>
                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a href="career.html"
-                        class="link-light text-decoration-none">Career</a></li>
+                        class="link-light text-decoration-none text-success">Career</a></li>
                     <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a href="contactus.html"
                         class="link-light text-decoration-none">Contact Us</a></li>
                   </ul>
@@ -315,7 +321,7 @@
                       <button class="accordion-button collapsed" type="button"
                           data-bs-toggle="collapse" data-bs-target="#collapseTwo2"
                           aria-expanded="false" aria-controls="collapseTwo2">
-                          <div class=" m-3 d-flex  justify-content-between col-12">
+                          <div class=" mt-3 mb-3 ms-2 d-flex  justify-content-between col-12">
                               <p class="m-0 footer-link-title">Company</p>
                               <p class="m-0 footer-link-icon "><i class="fa-solid fa-angle-down mt-1 me-5"></i></p>
                           </div>
@@ -328,7 +334,7 @@
                               <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a href="about.html"
                                   class="link-light text-decoration-none">About Us</a></li>
                               <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a href="career.html"
-                                  class="link-light text-decoration-none">Career</a></li>
+                                  class="link-light text-decoration-none text-success">Career</a></li>
                               <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4"><a href="contactus.html"
                                   class="link-light text-decoration-none">Contact Us</a></li>
                             </ul>
@@ -336,8 +342,8 @@
                   </div>
               </div>
                 <div class="col-12 d-none d-md-block col-sm-6 col-md-6 col-xl-5   mb-3 p-0 float-left  ">
-                  <h5 class="mb-4 footer_heading">Connect with us</h5>
-                  <ul class="list-group footer-hover">
+                  <h5 class="mb-4 footer_heading ms-5">Connect with us</h5>
+                  <ul class="list-group footer-hover ms-5">
                     <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a href="tel:+919998035620"
                         class="link-light text-decoration-none"> <img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/cal.png" alt="images">+91 99980 35620</a></li>
                     <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
@@ -356,7 +362,7 @@
                       <button class="accordion-button collapsed" type="button"
                           data-bs-toggle="collapse" data-bs-target="#collapseTwo3"
                           aria-expanded="false" aria-controls="collapseTwo3">
-                          <div class=" m-3 d-flex  justify-content-between col-12">
+                          <div class=" mt-3 mb-3 ms-2 d-flex  justify-content-between col-12">
                               <p class="m-0 footer-link-title">Connect with us</p>
                               <p class="m-0 footer-link-icon "><i class="fa-solid fa-angle-down mt-1 me-5"></i></p>
                           </div>
@@ -406,6 +412,17 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
     <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
+
+    <script>
+      $(window).scroll(function () {
+          if($(window).scrollTop() >400){
+        $(".scrollbar").addClass("show_scroll_btn");
+      }
+      else{
+        $(".scrollbar").removeClass("show_scroll_btn");
+      }
+          });
+  </script>
   <!-- Script end -->
 </body>
 
