--- a/industrial_products/industrial_product.html
+++ b/industrial_products/industrial_product.html
@@ -17,7 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/ecomaxstyless.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomaxstyles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 
@@ -121,12 +122,12 @@
     <div class="industrial-Product">
         <div class="container1">
             <div class="row">
-                <div class="col-12 d-flex justify-content-between flex-wrap p-0">
+                <div class="col-12 d-flex justify-content-between industrial-Product-item flex-wrap p-0">
                     <div class="industrial-Product-title text-white">
                         <h1 class="m-0">
                             ECOSYNTH 610
                         </h1>
-                        <p>HIGH TEMPERATURE EP CHAIN AND CONVEYOR LUBRICANT</p>
+                        <p>HIGH TEMPERATURE EP CHAIN AND <br class="d-xl-none"> CONVEYOR LUBRICANT</p>
                     </div>
                     <div class="industrial-Product-images">
                         <img src="/assets/images/industrial_product/ECOSYNTH610.png" alt="ECOSYNTH 610"
@@ -141,21 +142,21 @@
     <div class="PRODUCT_OVERVIEW section-padding">
         <div class="container1">
             <div class="row">
-                <div class="col-12 d-flex PRODUCT-OVERVIEW-And-SPECIAL-FEATURES p-0">
-                    <div class="col-6 PRODUCT-OVERVIEW d-flex">
+                <div class="col-12 flex-wrap d-flex PRODUCT-OVERVIEW-And-SPECIAL-FEATURES p-0">
+                    <div class="col-12 col-xxl-6 PRODUCT-OVERVIEW d-flex">
                         <h2 class="m-0">
                             PRODUCT OVERVIEW
                         </h2>
                         <p>Ecosynth 610 High temperature EP Chain and conveyor lubricant is fully synthetic ester base
                             high
-                            temperature chain oil with optimum wear protection, formulated for <br> lubrication of
+                            temperature chain oil with optimum wear protection, formulated for lubrication of
                             chains and
                             conveyors working at elevated temperature and also under influence of humidity Unique
-                            combination of synthetic ester and specifically designed <br> anti-oxidant package ensures
+                            combination of synthetic ester and specifically designed anti-oxidant package ensures
                             superior
                             performance in terms of evaporation, thermal stability and varnish formation.</p>
                     </div>
-                    <div class="col-6 SPECIAL-FEATURES">
+                    <div class="col-12 col-xxl-6 SPECIAL-FEATURES">
                         <h2>
                             SPECIAL FEATURES
                         </h2>
@@ -168,7 +169,7 @@
                             </li>
                             <li>
                                 It penetrates into link and pins and by reducing wear in highest potential wear area,
-                                <br> it
+                                it
                                 increase life of chain and further reduces maintenance cost.
                             </li>
                             <li>
@@ -178,10 +179,10 @@
                                 Excellent corrosion resistance to protect in humid , damp and even wet conditions.
                             </li>
                             <li>
-                                Does not form any carbon deposits and provides clean and safe<br> working environment.
+                                Does not form any carbon deposits and provides clean and safe working environment.
                             </li>
                             <li>
-                                Uniquely designed anti-oxidant package provides long service life with lower <br>
+                                Uniquely designed anti-oxidant package provides long service life with lower
                                 deposits
                                 and varnish formation.
                             </li>
@@ -196,42 +197,167 @@
     <div class="TECHNICAL-SPECIFICATIONS">
         <div class="container1">
             <div class="row">
-                <div class="col-12 TECHNICAL-SPECIFICATIONS-Result justify-content-between d-flex flex-wrap">
+                <div class="col-12 p-0 TECHNICAL-SPECIFICATIONS-Result justify-content-between d-flex flex-wrap">
                     <div class="TECHNICAL-SPECIFICATIONS-title">
                         <h2 class="text-white">
                             TECHNICAL <br> SPECIFICATIONS
                         </h2>
                     </div>
-                    <table class="PROPERTY-TESTMETHOD-RESULT">
-                        <thead>
-                          <tr class="text-white text-center">
-                            <th scope="col">PROPERTY</th>
-                            <th scope="col">TEST METHOD</th>
-                            <th scope="col">RESULT</th>
-                          </tr>
+                    <table class="PROPERTY-TESTMETHOD-RESULT d-none d-md-block">
+                        <thead class="thead">
+                            <tr class="text-white text-center">
+                                <th scope="col" class="PROPERTY-gap"><span>PROPERTY</span></th>
+                                <th scope="col" class="PROPERTY-gap"><span>TEST METHOD</span></th>
+                                <th scope="col" class="PROPERTY-gap PROPERTY-gap-0"><span>RESULT</span></th>
+                            </tr>
                         </thead>
-                        <tbody>
-                          <tr>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                          </tr>
-                          <tr>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                          </tr>
-                          <tr>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                          </tr>
+                        <tbody class="text-center tbody text-white">
+                            <tr>
+                                <td class="PROPERTY-gap"><span>Appearance</span></td>
+                                <td class="PROPERTY-gap"><span>Visual</span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>Amber / Yellow Liquid</span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>Base Fluid Type</span></td>
+                                <td class="PROPERTY-gap"><span>N/A</span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>Synthetic Ester Mixture</span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>Kinematic Viscosity</span> </td>
+                                <td class="PROPERTY-gap"><span></span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span></span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>cSt @ 40 Degree Cent.</span></td>
+                                <td class="PROPERTY-gap"><span>ASTM D 445</span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>185</span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>cSt @ 100 Degree Cent.</span></td>
+                                <td class="PROPERTY-gap"><span>ASTM D445</span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>31</span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>Temperature Range</span></td>
+                                <td class="PROPERTY-gap"><span></span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>-30 to 300 Degree Cent.</span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>Viscosity Index</span></td>
+                                <td class="PROPERTY-gap"><span>ASTM D 2270</span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>211</span></td>
+                            </tr>
+                            <tr>
+                                <td class="PROPERTY-gap"><span>Flash Point Degree Cent.</span></td>
+                                <td class="PROPERTY-gap"><span></span></td>
+                                <td class="PROPERTY-gap PROPERTY-gap-0"><span>316 C</span></td>
+                            </tr>
                         </tbody>
-                      </table>
+                    </table>
+                    <div class="swiper industrial_swiper PROPERTY-TESTMETHOD-RESULT d-md-none">
+                        <div class="swiper-wrapper industrial_slaider m-0">
+                          <div class="swiper-slide industrial_slaider_item">
+                            <h5>PROPERTY</h5>
+                            <ul>
+                                <li>
+                                    Appearance
+                                </li>
+                                <li>
+                                    Base Fluid Type
+                                </li>
+                                <li>
+                                    Kinematic Viscosity	
+                                </li>
+                                <li>
+                                    cSt @ 40 Degree Cent.
+                                </li>
+                                <li>
+                                    cSt @ 100 Degree Cent.
+                                </li>
+                                <li>
+                                    Temperature Range
+                                </li>
+                                <li>
+                                    Viscosity Index
+                                </li>
+                                <li>
+                                    Flash Point Degree Cent.
+                                </li>
+                            </ul>
+                          </div>
+                          <div class="swiper-slide">Slide 2</div>
+                          <div class="swiper-slide">Slide 3</div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                      </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- TECHNICAL SPECIFICATIONS End -->
+    <!-- DIRECTION FOR STORAGE AND USE Start -->
+    <section class="section-padding DIRECTION-FOR-STORAGE-AND-USE ">
+        <div class="container1">
+            <div class="row">
+                <div class="col-12 flex-wrap d-flex p-0">
+                    <div class="col-12 col-xl-6 DIRECTION-FOR-STORAGE">
+                        <div class="STORAGS ">
+                            <h2 class="m-0">
+                                DIRECTION FOR STORAGE AND USE
+                            </h2>
+                            <ul class="m-0">
+                                <li>
+                                    Ecosynth 610 can be applied manually by brush or oilcan if required.
+                                </li>
+                                <li>
+                                    Ecosynth 610 should be stored in unopened container.
+                                </li>
+                                <li>
+                                    The storage temperature should be controlled between +1 C to +40 C.
+                                </li>
+                                <li>
+                                    Shelf life is 3 years from date of manufacturing.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="STORAGS">
+                            <h2 class="m-0">
+                                TYPICAL APPLICATIONS
+                            </h2>
+                            <p class="m-0">Ecosynth 610 is designed for lubrication of Textile stenters, drying
+                                machines, paint stoving ovens,
+                                bakery ovens and similar high temperature chain applications, hinges, joints and slide
+                                ways at
+                                higher temperature.</p>
+                        </div>
+                        <div class="STORAGS">
+                            <h2 class="m-0">
+                                TYPICAL APPLICATIONS
+                            </h2>
+                            <p class="m-0">Available in
+                                5 Ltr., 10 Ltr. and 50 Ltr. pack</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xl-6 DIRECTION-FOR-STORAGE-images">
+                        <img src="/assets/images/industrial_product/DIRECTION.png" alt="DIRECTION FOR STORAGE AND USE"
+                            class="img-fluid">
+                    </div>
+                </div>
+                <div class="product_btn product_btn_bak justify-content-center d-flex">
+                    <a href="/industrial/industrial.html">
+                        <div class="btn_back d-flex align-items-center">
+                            <span class="about-btn d-flex back_btn align-items-center justify-content-center">
+                                <i class="fa-solid fa-arrow-left-long"></i>
+                            </span>
+                            <span class="text">Back</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- DIRECTION FOR STORAGE AND USE End -->
+
     <!-- Footer start -->
     <footer>
         <div class="footer_inner">
@@ -449,6 +575,7 @@
     </footer>
     <!-- Footer end -->
     <!-- Script start -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -464,6 +591,14 @@
             }
         });
     </script>
+     <script>
+        var swiper = new Swiper(".industrial_swiper", {
+          pagination: {
+            el: ".swiper-pagination",
+            dynamicBullets: true,
+          },
+        });
+      </script>
     <!-- Script end -->
 </body>
 
