--- a/products/index.html
+++ b/products/index.html
@@ -728,7 +728,7 @@
                         document.getElementById('data-images_mini').innerHTML = mini_images;
 
                         let bak_btn = `
-                        <a href="${collectionSlug}">
+                        <a href="https://ecomaxlubricant.com/collections/index?s=${collectionSlug}">
                         <div class="btn_back d-flex align-items-center">
                             <span class="about-btn d-flex back_btn align-items-center justify-content-center">
                                 <i class="fa-solid fa-arrow-left-long"></i>
@@ -739,8 +739,7 @@
 
                         `;
 
-                       document.getElementById("Back_btn_Product").innerHTML=bak_btn;
-                        console.log(collectionSlug);
+                       document.getElementById("Back_btn_Product").innerHTML=bak_bt
                         
                     }
 
